--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,9 +25,8 @@
             app:destination="@id/room"
             app:enterAnim="@android:anim/fade_in" />
         <argument
-            android:name="number2"
-            app:argType="integer"
-            android:defaultValue="21" />
+            android:name="roomId"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/room"
@@ -39,8 +38,7 @@
             app:destination="@id/hogares"
             app:enterAnim="@android:anim/fade_in" />
         <argument
-            android:name="number"
-            app:argType="integer"
-            android:defaultValue="2" />
+            android:name="roomId"
+            app:argType="string" />
     </fragment>
 </navigation>
