--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/favoritos"
-        android:title="Favoritos" android:icon="@drawable/ic_favoritos"/>
+        android:title="@string/favoritos" android:icon="@drawable/ic_favoritos"/>
     <item android:id="@+id/hogares"
-        android:title="Hogares" android:icon="@drawable/ic_home" />
+        android:title="@string/hogares" android:icon="@drawable/ic_home" />
     <item android:id="@+id/rutinas"
-        android:title="Rutinas" android:icon="@drawable/ic_rutinas"/>
+        android:title="@string/rutinas" android:icon="@drawable/ic_rutinas"/>
 
 </menu>
