--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/spinner"
-        android:title="ActionBar Spinner"
+        android:id="@+id/dark_mode"
+        android:title="@string/modoNocturno"
         app:actionViewClass="android.widget.Spinner"
         android:background="#ff00" />
 
     <item android:id="@+id/action_search"
         android:orderInCategory="5"
-        android:title="Search"
+        android:title="@string/buscar"
         android:icon="@drawable/ic_lupa"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
