notification entra a rooms y borre constructores de fragments

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_favoritos_to_searchFragment"
             app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_favoritos_to_room"
+            app:destination="@id/room" />
     </fragment>
     <fragment
         android:id="@+id/rutinas"
