--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/dark_mode"
+        android:background="#FFFFFF"
         android:title="@string/modoNocturno"
-        app:actionViewClass="android.widget.Spinner"
-        android:background="#ff00" />
+        app:actionViewClass="android.widget.Spinner" />
 
+    <item
+        android:id="@+id/settings"
+        android:title="@string/ajustes" />
     <item android:id="@+id/action_search"
         android:orderInCategory="5"
         android:title="@string/buscar"
