Cambie flecha, quedo ya faucet y door y falta agregarle el nombre del hogar al room detail que estaba fallando

--- a/app/src/main/res/layout/blinds_layout.xml
+++ b/app/src/main/res/layout/blinds_layout.xml
@@ -80,6 +80,7 @@
                         android:id="@+id/expandBtn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
