--- a/app/src/main/res/layout/ac_view.xml
+++ b/app/src/main/res/layout/ac_view.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/cardBackground"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             style="@style/CardView.Light">
@@ -50,7 +51,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-
+                        android:textColor="@color/colorText"
                         android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:textSize="22sp"
-                        android:textColor="@color/colorText"
+                        android:textColor="@color/colorCardTitle"
                         app:layout_constraintBottom_toTopOf="@+id/onStateAc"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toBottomOf="@+id/ac_location" />
@@ -73,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="8dp"
-
+                        android:textColor="@color/colorTextSubtitle"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView" />
@@ -85,7 +86,7 @@
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-                        android:tint="@color/colorPrimary"
+                        android:tint="@color/colorButtons"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -103,9 +104,9 @@
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="10dp"
-                        android:shadowColor="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:theme="@style/SwitchTheme" />
 
                     <ImageButton
                         android:id="@+id/ac_minus"
@@ -113,6 +114,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/ripple_effect"
                         android:layout_marginStart="80dp"
+                        android:tint="@color/buttonImagesColor"
                         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                         app:layout_constraintStart_toEndOf="@+id/ac_switch"
                         app:layout_constraintTop_toTopOf="parent"
@@ -135,7 +137,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:background="#FFFFFF"
+                        android:background="@drawable/ripple_effect"
+                        android:tint="@color/buttonImagesColor"
                         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                         app:layout_constraintStart_toEndOf="@+id/ac_temp"
                         app:layout_constraintTop_toTopOf="parent"
@@ -156,6 +159,7 @@
                             android:text="@string/modo"
                             android:textSize="18sp"
                             android:textStyle="bold"
+                            android:textColor="@color/colorTextSubtitle"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/temp_group"
                             app:layout_constraintStart_toStartOf="parent"
@@ -172,21 +176,21 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/cold_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/frio" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/heat_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/calor" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/ventilation_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/ventilacion" />
@@ -234,35 +238,35 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_auto_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_22_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/veintidos" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_45_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_67_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/sesentaysiete" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_90_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/noventa" />
@@ -292,42 +296,42 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_auto_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_n90_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/menosNoventa" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_n45_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/menoscuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_0_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cero" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_45_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_90_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/noventa" />
@@ -358,35 +362,35 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_auto_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_25_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/veinticinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_50_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cincuenta" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_75_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/setentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_100_button"
-                                style="?attr/materialButtonOutlinedStyle"
+                                style="@style/outlinedButton"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:text="@string/cien" />
@@ -396,7 +400,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="(%)"
+                            android:text="@string/percentage"
                             app:layout_constraintBottom_toBottomOf="@+id/fan_speed_toggle_group"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/fan_speed_toggle_group"
