--- a/app/src/main/res/layout/faucet_view.xml
+++ b/app/src/main/res/layout/faucet_view.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/cardBackground"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             style="@style/CardView.Light">
@@ -50,6 +51,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:textSize="18sp"
+                        android:textColor="@color/colorText"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,8 +61,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:textColor="@color/colorText"
                         android:textSize="22sp"
+                        android:textColor="@color/colorCardTitle"
                         app:layout_constraintBottom_toTopOf="@+id/onStateFaucet"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toBottomOf="@+id/faucet_location" />
@@ -71,6 +73,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="8dp"
+                        android:textColor="@color/colorTextSubtitle"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView" />
@@ -82,7 +85,7 @@
                         android:background="@drawable/ripple_effect"
                         android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-                        android:tint="@color/colorPrimary"
+                        android:tint="@color/colorButtons"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -120,9 +123,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
-                            android:backgroundTint="@color/colorPrimary"
+                            android:backgroundTint="@color/colorButtons"
+                            android:textColor="@color/colorCardTitle"
                             android:text="@string/abrir"
-                            android:textColor="@color/colorText"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/faucet_dispense"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -132,9 +135,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
-                            android:backgroundTint="@color/colorPrimary"
                             android:text="@string/dispensar"
-                            android:textColor="@color/colorText"
+                            android:backgroundTint="@color/colorButtons"
+                            android:textColor="@color/colorCardTitle"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -155,6 +158,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="20dp"
                             android:src="@drawable/ic_droplet"
+                            android:tint="@color/buttonImagesColor"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/faucet_seekBar"
                             app:layout_constraintStart_toStartOf="parent"
@@ -165,6 +169,8 @@
                             android:id="@+id/faucet_seekBar"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
+                            android:progressTint="@color/colorButtons"
+                            android:thumbTint="@color/colorButtons"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                             app:layout_constraintEnd_toStartOf="@+id/faucet_amount"
                             app:layout_constraintStart_toEndOf="@+id/imageView5"
