--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="appBackgroundColor">#E7E7E7</color>
     <color name="colorPrimary">#72E1C7</color>
     <color name="colorPrimaryLight">#87FFE3</color>
     <color name="colorSecondary">#6563FF</color>
-    <color name="colorText">#3C3F58</color>
+    <color name="colorText">#000000</color>
+    <color name="colorTextSubtitle">#737373</color>
+    <color name="colorCardTitle">#3C3F58</color>
     <color name="colorPrimaryDark">#3B4063</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="backgroundColor">#E7E7E7</color>
+    <color name="cardBackground">#FFFFFF</color>
+    <color name="buttonImagesColor">#6563FF</color>
+    <color name="colorButtons">#72E1C7</color>
+    <color name="colorButtonsDisabled">#71A69A</color>
+    <color name="buttonGroupStrokeColor">#FF0000</color>
+    <color name="buttonGroupStrokeColorChecked">#72E1C7</color>
+    <color name="buttonGroupTextColorChecked">#72E1C7</color>
+    <color name="buttonGroupStrokeColorUnchecked">#A6A6A6</color>
 </resources>
